Increase opacity to meet color contrast ratio, fixes #52587

--- a/src/vs/workbench/parts/scm/electron-browser/media/scmViewlet.css
+++ b/src/vs/workbench/parts/scm/electron-browser/media/scmViewlet.css
@@ -15,7 +15,6 @@
 
 .scm-viewlet .empty-message {
 	padding: 10px 22px 0 22px;
-	opacity: 0.5;
 }
 
 .scm-viewlet:not(.empty) .empty-message,
